--- a/yn_shipingtonghua/Info.plist
+++ b/yn_shipingtonghua/Info.plist
@@ -2,14 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>视频云工具包需要访问你的相册权限，开启后才能读取视频文件</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>需要访问你的麦克风权限，开启后聊天才会有声音</string>
-	<key>NSCameraUsageDescription</key>
-	<string>需要访问你的相机权限，开启后视频聊天才会有画面</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>颐年远程探视</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,6 +22,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>需要访问你的相机权限，开启后视频聊天才会有画面</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>需要访问你的麦克风权限，开启后聊天才会有声音</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>视频云工具包需要访问你的相册权限，开启后才能读取视频文件</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
